0.21:
      Apply patch from damian.sparrow to fix warning in usage.c (issue #72).
      Fix lack of initialisation for ymax producing a compiler warning (issue
      #73).

0.20: 05/03/2011
      Fix spelling errors (issue #58)
      Add a MSC validation phase to check that all the entity names are known
       before rendering is started.  This now also outputs the input line
       number at which a problem was detected e.g.
         Error detected at line 10: Unknown source entity 'xyz'.
	 (issue #62)
      Add width and height attributes to svg output.
         (Thanks hwmaier for pointing this out, issue #63)
      When wrapping words in boxes, hypenate very long words if needed to fit
       the available space.
       (issue #59)
      Fix assertion if ... is placed on the same line as another arc, but
       after the arc has been specified.
      Fix regression where blank lines at the start of input would be
       rejected and parsing stopped.
       (Thanks Bernhard for the report and example)
      Allow output to stdout if - is specified as the output filename.
      Fix opening and closing the output file twice - the dummy output in the
       first layout run now goes to /dev/null (or a temp file on Win32).

0.19: 01/01/2011
      Configure script changes to be more thorough about gdlib and FreeType
       detection.  Also correct problems in configuring for Win32 native.
      Inprove RPM packaging compliance with Fedora packaging guidelines.
      Further gdlib anti-alising workarounds.
      Correct canvas height computation when last arc(s) skip (issue #46).
      Allow input quoted strings to span multiple lines e.g.
         a->b [label="line1
                      line1 too!"];
       (issue #45)
      Add gtksourceview syntax highlighting grammar installed in docs
       (Thanks to NThykier for adding this, issue #51).
      Improve error message output by showing line which caused the problem