@@ -11,7 +11,7 @@ testinput1.msc   testinput2.msc   testinput5.msc  testinput8.msc \
 testinput10.msc  testinput3.msc   testinput6.msc  testinput9.msc \
 testinput12.msc  testinput13.msc  testinput14.msc testinput15.msc \
 testinput16.msc  testinput17.msc  testinput18.msc testinput19.msc \
-testinput20.msc
+testinput20.msc  testinput21.msc
 
 CLEANFILES = *.png *.svg *.eps *.ismap
 
